--- a/package.json
+++ b/package.json
@@ -47,5 +47,6 @@
     "@graphql-codegen/client-preset": "2.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
